chore(engine): bump spring dependency to version 6 (#4952)
* chore(engine): bump spring dependency to version 6

related to camunda/camunda-bpm-platform#4869